initial setup of creating the project
